[gd_scene load_steps=4 format=3 uid="uid://23nowuuuqhm2"]

[ext_resource type="Script" path="res://Scripts/tween_demo.gd" id="1_djk67"]
[ext_resource type="AudioStream" uid="uid://bi2wn73lo70ha" path="res://Sounds/Golden (Acapella).mp3" id="2_og1iy"]
[ext_resource type="AudioStream" uid="uid://dmqunx31c12y3" path="res://Sounds/Golden (Instrumental).mp3" id="3_v6u18"]

[node name="TweenDemo" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djk67")
track1 = ExtResource("2_og1iy")
track2 = ExtResource("3_v6u18")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -60.0
offset_right = 152.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FadeInAll" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fade In All"

[node name="FadeOutAll" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fade Out All"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Track 1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Track1Tween" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0"
virtual_keyboard_type = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Duration"

[node name="Track1TweenDuration" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "0"
virtual_keyboard_type = 2

[node name="Tween1" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Tween
"

[node name="Track1FadeIn" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fade In"

[node name="Track1FadeOut" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fade Out"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Track 2"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Track2Tween" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0"
virtual_keyboard_type = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Duration"

[node name="Track2TweenDuration" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "0"
virtual_keyboard_type = 2

[node name="Tween2" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Tween
"

[node name="Track2FadeIn" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Fade In"

[node name="Track2FadeOut" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Fade Out"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/FadeInAll" to="." method="_on_fade_in_all_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FadeOutAll" to="." method="_on_fade_out_all_pressed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/Track1Tween" to="." method="_on_track_1_tween_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/Track1TweenDuration" to="." method="_on_track_1_tween_duration_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Tween1" to="." method="_on_tween_1_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/Track1FadeIn" to="." method="_on_track_1_fade_in_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/Track1FadeOut" to="." method="_on_track_1_fade_out_pressed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer/Track2Tween" to="." method="_on_track_2_tween_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/VBoxContainer2/Track2TweenDuration" to="." method="_on_track_2_tween_duration_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer/Tween2" to="." method="_on_tween_2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/Track2FadeIn" to="." method="_on_track_2_fade_in_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/Track2FadeOut" to="." method="_on_track_2_fade_out_pressed"]
